--- a/ProAcc/Views/IssueTrack/GetIssueTrackById.cshtml
+++ b/ProAcc/Views/IssueTrack/GetIssueTrackById.cshtml
@@ -139,7 +139,7 @@
             {
                 <tr>
                     <td>
-                        <a class="txtG" value="@item.CreatedDate">@item.CreatedDate</a>
+                        <a class="txtG" value="@item.CreatedDate">@item.CreatedDate.ToLocalTime()</a>
                     </td>
                     <td>
                         <a class="txtG" value="@item.Description">@item.Description</a>
