--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -122,6 +122,14 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-6">
+        <a class="card-title" style="float: left;">Project Name :@Session["Project_Name"]</a>
+    </div>
+    <div class="col-6">
+        <a class="card-title " style="float: right;">Instance Name : @Session["Instance_Name"]</a>
+    </div>
+</div>
 <div style="margin-left:20px;margin-top:20px">
     <table id="jqGrid"></table>
     <div id="jqGridPager"></div>
@@ -129,11 +137,28 @@
     @*<img src="https://img.icons8.com/officel/80/000000/export-pdf.png" />*@
     <button class="MyClass123" id="export" style="display:none;"></button>
 </div>
+<input type="hidden" id="hdnSessionProject_ID" value="@Session["Project_ID"]" />
+<input type="hidden" id="hdnSessionInstance_ID" value="@Session["Instance_ID"]" />
 
 <script>
     $(document).ready(function () {
             $("#IDInstance").prop("disabled", true);
-            $('#SubmitInstance').prop("disabled", true);
+        $('#SubmitInstance').prop("disabled", true);
+
+        var Instance=$("#hdnSessionInstance_ID").val();
+        if (Instance != "") {
+            var IDInstance = $("#hdnSessionInstance_ID").val();
+            $.ajax({
+                url: '@Url.Action("SubmitInstance", "Home")',
+                type: "POST",
+                data: { 'IDInstance': IDInstance },
+                success: function (result) {
+                    Notiflix.Notify.Success('New Live Instance updated !', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                     LoadTable(IDInstance);
+                    $('#jqGrid').trigger('reloadGrid');
+                }
+            });
+        }
     });
      $('#IDCustomer').change(function () {
             $("#IDInstance").prop("disabled", false);
