--- a/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
@@ -88,20 +88,46 @@
 @{
     Html.RenderAction("InstanceSelection", "ProjectMonitor");
 }
+
 <div style="margin-top:20px;">
     @*<table id="jqGrid"></table>
         <div id="jqGridPager"></div>*@
     @{
+        <div class="row">
+            <div class="col-6">
+                <a class="card-title" style="float: left;">Project Name :@Session["Project_Name"]</a>
+            </div>
+            <div class="col-6">
+                <a class="card-title " style="float: right;">Instance Name : @Session["Instance_Name"]</a>
+            </div>
+        </div>
         Html.RenderAction("Monitor", "ProjectMonitor");
     }
 </div>
 
+<input type="hidden" id="hdnSessionProject_ID" value="@Session["Project_ID"]" />
+<input type="hidden" id="hdnSessionInstance_ID" value="@Session["Instance_ID"]" />
 <script>
     $(document).ready(function () {
-            $("#IDInstance").prop("disabled", true);
+        $("#IDInstance").prop("disabled", true);
         $('#SubmitInstance').prop("disabled", true);
-
+        
+        var Instance=$("#hdnSessionInstance_ID").val();
+        if (Instance != "") {
+            var IDInstance = $("#hdnSessionInstance_ID").val();
+            $.ajax({
+                url: '@Url.Action("SubmitInstance", "Home")',
+                type: "POST",
+                data: { 'IDInstance': IDInstance },
+                success: function (result) {
+                    Notiflix.Notify.Success('New Live Instance updated !', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                     LoadTable(IDInstance);
+                    $('#jqGrid').trigger('reloadGrid');
+                }
+            });
+        }
     });
+
      $('#IDCustomer').change(function () {
             $("#IDInstance").prop("disabled", false);
             var id = $(this).val();
@@ -195,8 +221,9 @@
             data: { 'IDInstance': IDInstance },
             success: function (result) {
                 Notiflix.Notify.Success('New Live Instance updated !', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
-                 LoadTable(IDInstance);
-        $('#jqGrid').trigger('reloadGrid');
+                LoadTable(IDInstance);
+                location.reload()
+             $('#jqGrid').trigger('reloadGrid');
             }
         });
    });
